# THUG-SDL

./: .gitignore  CMakeLists.txt  COMMITNOTES.txt  LICENSE  README.md
Game/: gamecontrollerdb.txt  thugsdl.ini  thugsdl.pre
Game/Save/: Custom Skater.SKA
launcher/: Resources.h  Resources.rc  global.h  main.c  pagecontrol.c  pagecontrol.h  pagegamepad.c  pagegamepad.h  pagegeneral.c  pagegeneral.h  pagekeyboard.c  pagekeyboard.h  pgui.c  pgui.h
patcher/: main.c
script_src/qb/: Z_Compile.bat  Z_Compile.ps1  mod.ini  qdir.txt
script_src/qb/engine/: ButtonScripts.q
script_src/qb/engine/menu/: dialogbox.q  keyboard.q
script_src/qb/game/: gameflow.q  motox_control.q  skutils.q
script_src/qb/game/menu/: gamemenu.q  skateshop.q
script_src/qb/game/misc/: gameoptions.q
script_src/qb/game/net/: net.q  netmessages.q
script_src/qb/game/skater/: grindscripts.q  manualtricks.q  tricks.q
script_src/qb/gamemodes/: gamemode.q
scripts/qb/: Z_Compile.ps1  last_compiletime.tmp  mod.ini  thugsdl.pre
scripts/qb/compiled/: aaaaloopchecker.qb  allanims.qb  profile_ped.qb
scripts/qb/compiled/debugger/: debugger_names.qb
scripts/qb/compiled/engine/: reverb.qb
scripts/qb/compiled/engine/menu/: MenuButtonRemap.qb  colormenu.qb  consolemessage.qb  dialogbox.qb  panelmessage.qb  scalingmenu.qb
scripts/qb/compiled/game/: EdPieces.qb  EdPieces2.qb  Levels.qb  Sk4_PedAnim.qb  deck_layers.qb  events.qb  game.qb  gameflow.qb  goal_utilities.qb  motox_control.qb  ped.qb  player_controlled_vehicle.qb  playervehiclesounds.qb  sK4_PedSkaterAI.qb  scaling.qb  sk4_PedTalking.qb  skeleton.qb
scripts/qb/compiled/scripts/: cas_ped_f.qb  cas_ped_m.qb
scripts/qb/source/game/: game.q  gameflow.q  motox_control.q
src/: config.cpp  config.h  displayconfig.cpp  event.cpp  event.h  exports.def  input.cpp  input.h  main.cpp  modloader.cpp  modloader.h  observemenu.cpp  observemenu.h  patch.cpp  script.cpp  script.h
src/Logger/: ErrorManager.cpp  ErrorManager.h  Logger.cpp  Logger.h
src/Mod/: Levels.q  mod_template.cpp  mod_template.h
src/QB/: CFuncs.cpp  CFuncs.h  LazyArray.cpp  LazyArray.h  LazyStruct.cpp  LazyStruct.h  QB.cpp  QB.h  QBKey.cpp  QBKey.h  malloc.h  scriptcontent.h
src/Resources/: MyResources.h  MyResources.rc  Resources.h  Resources.rc  create_pause_menu_scriptcontent.qb  manualtricks_patched.qb  onscreen_keyboard_restored_scriptcontent.qb  oslogo.img
src/Resources/script_source/: Levels.q  colormenu.q  consolemessage.q  dialogbox.q  game.q  gameflow.q  gamemenu.q  gamemode.q  motox_control.q  net.q  onscreen_keyboard_restored_scriptcontent.q  scalingmenu.q  tricks.q  walltricks.q
src/Util/: sb.cpp  sb.h
(+176 files in other folders)
